--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
                         <div class="Chimps_fn_mintbox">
                             <div class="mint_left">
-                                <div class="mint_title"><span>Better be quick! Try to claim your spot below.</span></div>
+                                <div class="mint_title"><span>Swap now!</span></div>
                                 <div class="mint_list">
                                     <ul>
                                         <li>
