--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>Solcasino WL Claim</title>
+    <title>Apeswap</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
